# mindflow

./: LICENSE  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Counters.svelte  Evolution.svelte  Journal.svelte  Notes.svelte  Pomodoro.svelte  Sidebar.svelte  TodoList.svelte
src/routes/: +page.svelte
